# confidentialAI

./: .gitignore  .release-it.json  CHANGELOG.md  DEVOPS.md  README.md  package-lock.json  package.json
.github/: BRANCH_STRATEGY.md
.github/workflows/: build-extension.yml  ci.yml  deploy-api.yml  deploy-dashboard.yml  release.yml
apps/admin-dashboard/: .env.example  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo
docs/: ARCHITECTURE.md  ENGINEERING_STANDARDS.md  IMPLEMENTATION_GUIDE.md  NOTION_QDRANT_VECTOR_SEARCH.md  NOTION_WORKFLOW_GUIDE.md  STEP_BY_STEP_CHECKLIST.md
scripts/: sync-versions.js
services/security-api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/security-api/app/: main.py
services/security-api/app/agents/: __init__.py  ac.py  afe.py  asi.py  avs.py  image_moderator.py  llm_classifier.py  orchestrator.py  toxicity_analyzer.py  vector_search_node.py
services/security-api/app/api/: routes_analyze.py  routes_auth.py  routes_site_signals.py  routes_user_settings.py
services/security-api/app/core/: __init__.py  auth.py  config.py  detectors.py  error_tracking.py  incident_store.py  policy_engine.py  rate_limiter.py  site_signal_store.py  spacy_detectors.py  user_store.py
services/security-api/app/schemas/: __init__.py  analyze.py  auth.py  site_signals.py  user_settings.py
services/security-api/app/services/: embedding_service.py
services/security-api/app/stores/: vector_store.py
services/security-api/tests/: conftest.py  test_api_incidents.py  test_auth_settings_api.py  test_detectors_enhanced.py  test_health_and_api_infra.py  test_image_moderator_enhanced.py  test_langgraph_orchestrator.py  test_llm_classifier.py  test_policy_engine.py  test_regression_guards.py  test_site_signals_api.py  test_toxicity_analyzer.py  test_vector_search.py  test_workflow_guardrails.py
(+92 files in other folders)
